<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="launch_app">This button launch my</string>

    <string name="action_settings">Settings</string>
    <string name="activity_title">My Nanodegree Apps!</string>
    <string name="spotifyapp">Spotify Streamer</string>
    <string name="scoreapp">SCORE APP</string>
    <string name="libraryapp">LIBRARY APP</string>
    <string name="buildbiggerapp">BUILD IT BIGGER</string>
    <string name="xyzreaderapp">XYZ READER</string>
    <string name="capstoneapp">CAPSTONE: MY OWN APP</string>
</resources>
