<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/myLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_buttons"
        android:gravity="center_horizontal|top"
        android:text="@string/activity_title"
        android:textColor="@color/title_color"
        android:textSize="24sp" />


    <LinearLayout

        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <Button
            style="@style/UdacityButtons"
            android:id="@+id/btnSpotify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_button"
            android:layout_marginTop="@dimen/margin_button"
            android:clickable="true"
            android:text="@string/spotifyapp" />

        <Button
            style="@style/UdacityButtons"
            android:id="@+id/btnScoreapp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_button"
            android:layout_marginTop="@dimen/margin_button"
            android:clickable="true"
            android:text="@string/scoreapp" />

        <Button
            style="@style/UdacityButtons"
            android:id="@+id/btnLibraryapp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_button"
            android:layout_marginTop="@dimen/margin_button"
            android:clickable="true"
            android:text="@string/libraryapp" />

        <Button
            style="@style/UdacityButtons"
            android:id="@+id/btnBuildbigger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_button"
            android:layout_marginTop="@dimen/margin_button"
            android:clickable="true"
            android:text="@string/buildbiggerapp" />

        <Button
            style="@style/UdacityButtons"
            android:id="@+id/btnXyzreader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_button"
            android:layout_marginTop="@dimen/margin_button"
            android:clickable="true"
            android:text="@string/xyzreaderapp" />

        <Button
            style="@style/UdacityButtons"
            android:background="@color/red_button"
            android:textColor="@android:color/white"
            android:id="@+id/btnCapstonemyapp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_button"
            android:layout_marginTop="@dimen/margin_button"
            android:clickable="true"
            android:text="@string/capstoneapp" />


    </LinearLayout>

</RelativeLayout>
